--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,10 @@ markdown-it-py = "^3.0.0"
 mkdocs = "^1.5.3"
 mdurl = "^0.1.2"
 pygments = "^2.17.2"
-mkdocs-material = {extras = ["imaging"], version = "^9.5.15"}
+mkdocs-material = {extras = ["imaging"], version = "^9.5.17"}
 mkdocs-autorefs = "^1.0.1"
 mkdocs-site-urls = "^0.2.0"
-mkdocstrings = "^0.24.1"
+mkdocstrings = {extras = ["python"], version = "^0.24.2"}
 
 [build-system]
 requires = ["poetry-core"]
